build(windows): 更新打包列表以包含 necessary DLLs
- 在 hk_flutter_bundled_libraries 变量中添加了多个 DLL 文件路径
- 这些 DLL 文件对于插件的运行至关重要，包括 HCNetSDK、HCCore等
- 更新后的打包列表确保了所有必要的依赖项都能被正确包含在最终的构建输出中

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -91,12 +91,19 @@ add_custom_command(TARGET ${PLUGIN_NAME} POST_BUILD
     "${CMAKE_CURRENT_SOURCE_DIR}/lib/libssl-1_1-x64.dll" $<TARGET_FILE_DIR:${PLUGIN_NAME}>
 )
 
-# List of absolute paths to libraries that should be bundled with the plugin.
-# This list could contain prebuilt libraries, or libraries created by an
-# external build triggered from this build file.
+# 添加DLL文件到打包列表
 set(hk_flutter_bundled_libraries
-  ""
-  PARENT_SCOPE
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/HCNetSDK.dll"
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/HCCore.dll"
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/GdiPlus.dll"
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/hpr.dll"
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/HmMerge.dll"
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/libcrypto-1_1-x64.dll"
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/libssl-1_1-x64.dll"
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/HCNetSDK.lib"
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/HCCore.lib"
+    "${CMAKE_CURRENT_SOURCE_DIR}/lib/GdiPlus.lib"
+    PARENT_SCOPE
 )
 
 # === Tests ===
